--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -25,29 +25,27 @@
             <h1>Everbridge</h1>
             <span><address>Senior Platform Engineer (Kubernetes)</address></span><br />
             <span><address>Remote</address><time>2021 - current (Critical Events Management SaaS platform)</time></span>
-        </header>
+        </header><br />
         <ul>
         <li>IC on the platform team responsible for an Internal Developer Platform (IDP) built using Python/GitlabCI/Spinnaker. This IDP enables developers to manage hundreds of microservices via self-service CI/CD leveraging the EKS platform.</li>
         <li>Collaborate with end user dev teams to promote build and deployment best practices while encouraging developer feedback/contribution to the overall platform.</li>
         <li>Responsible for day-to-day Kubernetes infrastructure of a dozen medium sized (100+ node) clusters managed in AWS EKS - including supporting controllers/services.</li>
         <li>Introduced key Observability features to our Kubernetes infrastructure using Datadog and Honeycomb, leading to annual cost savings > $150K.</li>
-        <li></li>
         </ul>
         <header>
             <span><address>Senior Site Reliability Engineer II (Team Lead)</address></span><br />
             <span><address>Remote</address><time>2020 - 2021 (Critical Events Management SaaS platform)</time></span>
-        </header>
+        </header><br />
         <ul>
         <li>Granted technical guidance for SRE team and downstream product teams in the areas of Microservices (EKS), Observability, IaC, and CI/CD.</li>
         <li>Led soft-skill efforts such as mentoring, hiring, and peer reviews.</li>
         <li>Championed and implemented Production Readiness Reviews (PRR) to multiple product suites.</li>
         <li>Delivered several internal and external Minimum Viable Products (Java Spring Boot, Helm, Terraform) as an embedded SRE.</li>
-        <li></li>
         </ul>
         <header>
             <span><address>Senior Site Reliability Engineer</address></span><br />
             <span><address>Remote</address><time>2019 - 2020 (Critical Events Management SaaS platform)</time></span>
-        </header>
+        </header><br />
         <ul>
         <li>Worked closely with partner dev teams to migrate/refactor Java Spring Boot applications for our Kubernetes environment.</li>
         <li>Instrumented microservices utilizing 4 Golden Signals (4GS) methodology and Datadog while partnering with product teams.</li>
@@ -60,7 +58,7 @@
             <h1>LogRhythm</h1>
             <span><address>Site Reliability Engineer</address></span><br />
             <span><address>Boulder, CO</address><time>2019 - 2019 (Security Incident and Event Management SaaS)</time></span>
-        </header>
+        </header><br />
         <ul>
         <li>IC on a small team responsible for LogRhythm Cloud, the first company SaaS product.</li>
         <li>Worked to refactor an on-prem software stack to a fully automated solution inside GCP. Technologies included Ubuntu, Windows, BASH, Powershell, MySQL, Rundeck, Terraform, Jenkins, Elasticsearch, Apache, and Google Cloud Operations.</li>
@@ -72,7 +70,7 @@
             <h1>Northrop Grumman</h1>
             <span><address>Site Reliability Engineer</address></span><br />
             <span><address>Melbourne, FL</address><time>2016 - 2018 (Aerospace)</time></span>
-        </header>
+        </header><br />
         <ul>
         <li>As an SRE, I provided leadership, design/architecture, and mentoring across multiple product teams. I also contributed to projects establishing DoD RMF compliance at our Melbourne Center of Excellence.</li>
         <li>Introduced new DevOps processes to improve project agility, efficiency, and turnaroud utilizing Vagrant, Puppet, Foreman, and Git.</li>
@@ -85,7 +83,7 @@
         <header>
             <h1>Sabbatical</h1>
             <span><address>2015 - 2016</address></span><br />
-        </header>
+        </header><br />
         <ul>
         <li>I stamped my footprints through 16 countries. Please ask away!</li>
         </ul>
@@ -96,7 +94,7 @@
             <h1>TNSC</h1>
             <span><address>Senior Systems Engineer</address></span><br />
             <span><address>Melbourne, FL</address><time>2014 - 2015 (Consulting)</time></span>
-        </header>
+        </header><br />
         <ul>
         <li>Performed greenfield architecture design and infrastructure migration projects for clients in the SMB business sector. Full technical project ownership with customer contact from kickoff to completion.</li>
         <li>Instrumental in technical leadership/mentoring other engineers within the organization.</li>
@@ -109,7 +107,7 @@
             <h1>ENSCO</h1>
             <span><address>Senior Systems Engineer</address></span><br />
             <span><address>Melbourne, FL </address><time>2008 - 2014 (Aerospace)</time></span>
-        </header>
+        </header><br />
         <ul>
         <li>Member of an operations team providing architecture and administration for enterprise infrastructure comprising multiple datacenters.</li>
         <li>Responsible for backup administration, various virtualization platforms, HPC administration, storage architecture and adminstration.</li>
