--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -22,8 +22,8 @@
     <h1>PROFESSIONAL EXPERIENCE</h1>
     <article>
         <header>
-            <h1>Everbridge</h1>
-            <span><address>Senior Platform Engineer (Kubernetes)</address></span><br />
+            <h1>Everbridge</h1><address> Senior Platform Engineer (Kubernetes)</address>
+            <span></span><br />
             <span><address>Remote</address><time>2021 - current (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
@@ -55,9 +55,9 @@
     </article>
     <article>
         <header>
-            <h1>LogRhythm</h1>
+            <h1>LogRhythm</h1><address> Boulder, CO</address>
             <span><address>Site Reliability Engineer</address></span><br />
-            <span><address>Boulder, CO</address><time>2019 - 2019 (Security Incident and Event Management SaaS)</time></span>
+            <span><time>2019 - 2019 (Security Incident and Event Management SaaS)</time></span>
         </header><br />
         <ul>
         <li>IC on a small team responsible for LogRhythm Cloud, the first company SaaS product.</li>
@@ -67,9 +67,9 @@
     </article>
     <article>
         <header>
-            <h1>Northrop Grumman</h1>
+            <h1>Northrop Grumman</h1><address> Melbourne, FL</address>
             <span><address>Site Reliability Engineer</address></span><br />
-            <span><address>Melbourne, FL</address><time>2016 - 2018 (Aerospace)</time></span>
+            <span><time>2016 - 2018 (Aerospace)</time></span>
         </header><br />
         <ul>
         <li>As an SRE, I provided leadership, design/architecture, and mentoring across multiple product teams. I also contributed to projects establishing DoD RMF compliance at our Melbourne Center of Excellence.</li>
@@ -91,9 +91,9 @@
     </article>
     <article>
         <header>
-            <h1>TNSC</h1>
+            <h1>TNSC</h1><address> Melbourne, FL</address>
             <span><address>Senior Systems Engineer</address></span><br />
-            <span><address>Melbourne, FL</address><time>2014 - 2015 (Consulting)</time></span>
+            <span><time>2014 - 2015 (Consulting)</time></span>
         </header><br />
         <ul>
         <li>Performed greenfield architecture design and infrastructure migration projects for clients in the SMB business sector. Full technical project ownership with customer contact from kickoff to completion.</li>
@@ -104,9 +104,9 @@
     </article>
     <article>
         <header>
-            <h1>ENSCO</h1>
+            <h1>ENSCO</h1><address> Melbourne, FL </address>
             <span><address>Senior Systems Engineer</address></span><br />
-            <span><address>Melbourne, FL </address><time>2008 - 2014 (Aerospace)</time></span>
+            <span><time>2008 - 2014 (Aerospace)</time></span>
         </header><br />
         <ul>
         <li>Member of an operations team providing architecture and administration for enterprise infrastructure comprising multiple datacenters.</li>
