--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -67,7 +67,7 @@
     </article>
     <article>
         <header>
-            <h1>Northrop Grumman</h1><address> Melbourne, FL</address>
+            <span><h1>Northrop Grumman</h1><h3> Melbourne, FL</h3></span>
             <span><address>Site Reliability Engineer</address></span><br />
             <span><time>2016 - 2018 (Aerospace)</time></span>
         </header><br />
