--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -22,7 +22,7 @@
     <h1>PROFESSIONAL EXPERIENCE</h1>
     <article>
         <header>
-            <h1>Everbridge</h1><address> Senior Platform Engineer (Kubernetes)</address>
+            <h1>Everbridge - Remote</h1><address> Senior Platform Engineer (Kubernetes)</address>
             <span></span><br />
             <span><address>Remote</address><time>2021 - current (Critical Events Management SaaS platform)</time></span>
         </header><br />
@@ -55,7 +55,7 @@
     </article>
     <article>
         <header>
-            <h1>LogRhythm</h1><address> Boulder, CO</address>
+            <h1>LogRhythm - Boulder, CO</h1>
             <span><address>Site Reliability Engineer</address></span><br />
             <span><time>2019 - 2019 (Security Incident and Event Management SaaS)</time></span>
         </header><br />
@@ -91,7 +91,7 @@
     </article>
     <article>
         <header>
-            <h1>TNSC</h1><address> Melbourne, FL</address>
+            <h1>TNSC - Melbourne, FL</h1>
             <span><address>Senior Systems Engineer</address></span><br />
             <span><time>2014 - 2015 (Consulting)</time></span>
         </header><br />
@@ -104,7 +104,7 @@
     </article>
     <article>
         <header>
-            <h1>ENSCO</h1><address> Melbourne, FL </address>
+            <h1>ENSCO - Melbourne, FL</h1>
             <span><address>Senior Systems Engineer</address></span><br />
             <span><time>2008 - 2014 (Aerospace)</time></span>
         </header><br />
