--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -24,7 +24,7 @@
         <header>
             <h1>Everbridge - Remote</h1><address> Senior Platform Engineer (Kubernetes)</address>
             <span></span><br />
-            <span><address>Remote</address><time>2021 - current (Critical Events Management SaaS platform)</time></span>
+            <span><time>2021 - current (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
         <li>IC on the platform team responsible for an Internal Developer Platform (IDP) built using Python/GitlabCI/Spinnaker. This IDP enables developers to manage hundreds of microservices via self-service CI/CD leveraging the EKS platform.</li>
@@ -34,7 +34,7 @@
         </ul>
         <header>
             <span><address>Senior Site Reliability Engineer II (Team Lead)</address></span><br />
-            <span><address>Remote</address><time>2020 - 2021 (Critical Events Management SaaS platform)</time></span>
+            <span><time>2020 - 2021 (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
         <li>Granted technical guidance for SRE team and downstream product teams in the areas of Microservices (EKS), Observability, IaC, and CI/CD.</li>
@@ -44,7 +44,7 @@
         </ul>
         <header>
             <span><address>Senior Site Reliability Engineer</address></span><br />
-            <span><address>Remote</address><time>2019 - 2020 (Critical Events Management SaaS platform)</time></span>
+            <span><time>2019 - 2020 (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
         <li>Worked closely with partner dev teams to migrate/refactor Java Spring Boot applications for our Kubernetes environment.</li>
