--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,30 +4,22 @@
         <header>
             <h1>B.s.C, Information Technology</h1>
             <span>University of Central Florida</span><br />
-            <span><address>Orlando, FL</address><time>2005 to 2007</time></span>
+            <span><address>Orlando, FL</address></span>
         </header>
     </article>
     <article>
         <header>
-            <h1>AWS Certified Solutions Architect Associate – 2018</h1>
+            <h1>AWS Certified Solutions Architect Associate</h1>
         </header>
     </article>
     <article>
         <header>
-            <h1>AWS Certified SysOps Administrator – 2018</h1>
+            <h1>AWS Certified SysOps Administrator</h1>
         </header>
     </article>
     <article>
         <header>
-            <h1>AWS Certified DevOps Professional – 2018</h1>
-        </header>
-    </article>
-    <article>
-        <header>
-            <h1>VMWare Certified Professional 5</h1>
-            <span>
-                <address>VCP510: #220142173</address>
-            </span>
+            <h1>AWS Certified DevOps Professional</h1>
         </header>
     </article>
     <article>
