--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -33,7 +33,7 @@
         <li>Introduced key Observability features to our Kubernetes infrastructure using Datadog and Honeycomb, leading to annual cost savings > $150K.</li>
         </ul>
         <header>
-            <address>Senior Site Reliability Engineer II (Team Lead)</address><br />
+            <address><b>Senior Site Reliability Engineer II (Team Lead)</b></address><br />
             <span><time>2020 - 2021 (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
