--- a/_includes/employment.html
+++ b/_includes/employment.html
@@ -22,8 +22,7 @@
     <h1>PROFESSIONAL EXPERIENCE</h1>
     <article>
         <header>
-            <h1>Everbridge - Remote</h1><address> Senior Platform Engineer (Kubernetes)</address>
-            <span></span><br />
+            <h1>Everbridge - Remote</h1><address> Senior Platform Engineer (Kubernetes)</address><br />
             <span><time>2021 - current (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
@@ -33,7 +32,7 @@
         <li>Introduced key Observability features to our Kubernetes infrastructure using Datadog and Honeycomb, leading to annual cost savings > $150K.</li>
         </ul>
         <header>
-            <address><b>Senior Site Reliability Engineer II (Team Lead)</b></address><br />
+            <address>Senior Site Reliability Engineer II (Team Lead)</address><br />
             <span><time>2020 - 2021 (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
@@ -43,7 +42,7 @@
         <li>Delivered several internal and external Minimum Viable Products (Java Spring Boot, Helm, Terraform) as an embedded SRE.</li>
         </ul>
         <header>
-            <span><address>Senior Site Reliability Engineer</address></span><br />
+            <address>Senior Site Reliability Engineer</address><br />
             <span><time>2019 - 2020 (Critical Events Management SaaS platform)</time></span>
         </header><br />
         <ul>
@@ -56,7 +55,7 @@
     <article>
         <header>
             <h1>LogRhythm - Boulder, CO</h1>
-            <span><address>Site Reliability Engineer</address></span><br />
+            <address>Site Reliability Engineer</address><br />
             <span><time>2019 - 2019 (Security Incident and Event Management SaaS)</time></span>
         </header><br />
         <ul>
@@ -68,7 +67,7 @@
     <article>
         <header>
             <h1>Northrop Grumman -  Melbourne, FL</h1>
-            <span><address>Site Reliability Engineer</address></span><br />
+            <address>Site Reliability Engineer</address><br />
             <span><time>2016 - 2018 (Aerospace)</time></span>
         </header><br />
         <ul>
@@ -92,7 +91,7 @@
     <article>
         <header>
             <h1>TNSC - Melbourne, FL</h1>
-            <span><address>Senior Systems Engineer</address></span><br />
+            <address>Senior Systems Engineer</address><br />
             <span><time>2014 - 2015 (Consulting)</time></span>
         </header><br />
         <ul>
@@ -105,7 +104,7 @@
     <article>
         <header>
             <h1>ENSCO - Melbourne, FL</h1>
-            <span><address>Senior Systems Engineer</address></span><br />
+            <address>Senior Systems Engineer</address><br />
             <span><time>2008 - 2014 (Aerospace)</time></span>
         </header><br />
         <ul>
