--- a/_includes/initiatives.html
+++ b/_includes/initiatives.html
@@ -2,23 +2,17 @@
     <h1>Certifications</h1>
     <article>
         <header>
-            <h1>AWS Certified Solutions Architect Associate – 2018</h1>
+            <h1>AWS Certified Solutions Architect Associate</h1>
         </header>
     </article>
     <article>
         <header>
-            <h1>AWS Certified SysOps Administrator – 2018</h1>
+            <h1>AWS Certified SysOps Administrator</h1>
         </header>
     </article>
     <article>
         <header>
-            <h1>AWS Certified DevOps Professional – 2018</h1>
-        </header>
-    </article>
-    <article>
-        <header>
-            <h1>VMWare Certified Professional 5</h1>
-            <span><address>VCP510: #220142173</address></span>
+            <h1>AWS Certified DevOps Professional</h1>
         </header>
     </article>
 </section>
