certified scrum master

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -23,6 +23,11 @@
     </article>
     <article>
         <header>
+            <h1>Certified Scrum Master</h1>
+        </header>
+    </article>
+    <article>
+        <header>
             <h1>CompTIA Security+ce</h1>
             <span><address>(Required for DoD 8570.1 compliance)</address></span>
         </header>
