--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,8 +1,7 @@
 <section class="thirteen columns">
     <h1>About Me</h1>
     <article>
-        <p>I am an outgoing and energetic engineer with 10+ years experience. My career has been focused on fulfilling positions within cross-functional teams that fit my skill set, personality, and organizational values. Most of my time has been spent on agile, fully remote teams that demanded agility and tight communication for success.
-        <br />Outside of my ninja duties, I enjoy traveling, running, diving, apnea diving, and spearfishing.
-        </p>
+        <p>I am an outgoing and energetic engineer with 10+ years experience. My career has been focused on fulfilling positions within cross-functional teams that fit my skill set, personality, and organizational values. Most of my time has been spent on agile, fully remote teams that demanded agility and tight communication for success.</p><br />
+        <p>Outside of my ninja duties, I enjoy traveling, running, diving, apnea diving, and spearfishing.</p>
     </article>
 </section>
