--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -43,9 +43,8 @@
         </p>
         <p>
             <a href="{{ site.email_full }}">{{ site.email }}</a><br/>
-            <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a>
+            <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a><br/>
             <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a>
-            </a>"
         </p>
     </header>
     <div class="thirteen columns clearfix">
